SE MODIFICO EL ARCHIVO BASE

--- a/base.html
+++ b/base.html
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     {% block extrastatic %}
     {% endblock %}
-    <title>{% block title %} practica {% endblock %}</title>
+    <title>{% block title %} practica NUEVA MEJORADA {% endblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -13,7 +14,8 @@
 <body>
     {% block content %}
     {% endblock %}
-
+	<p1>Hola como estas </p1>
+    <h1>JAJAJAJAJ</h1>
     {% block footer %}
     {% endblock %}
 
